--- a/src/css/main.less
+++ b/src/css/main.less
@@ -130,11 +130,11 @@ a{
 
         i {
           display: block;
-          width: 6rem;
-          height: 6rem;
+          width: 5rem;
+          height: 5rem;
           border-radius: 50%;
 
-          background-image: url(../icon/meituanFuncList.png);
+          background-image: url(../icon/meituan.png);
         }
 
         span {
@@ -149,39 +149,39 @@ a{
       }
 
       li:nth-of-type(2) i {
-        background-position: -72px 0;
+        background-position: -60px 0;
       }
 
       li:nth-of-type(3) i {
-        background-position: -144px 0;
+        background-position: -120px 0;
       }
 
       li:nth-of-type(4) i {
-        background-position: -216px 0;
+        background-position: -180px 0;
       }
 
       li:nth-of-type(5) i {
-        background-position: -288px 0;
+        background-position: -240px 0;
       }
 
       li:nth-of-type(6) i {
-        background-position: 0 72px;
+        background-position: 0 60px;
       }
 
       li:nth-of-type(7) i {
-        background-position: -72px 72px;
+        background-position: -60px 60px;
       }
 
        li:nth-of-type(8) i {
-        background-position: -144px 72px;
+        background-position: -120px 60px;
       }
 
       li:nth-of-type(9) i {
-        background-position: -216px 72px;
+        background-position: -180px 60px;
       }
 
       li:nth-of-type(10) i {
-        background-position: -288px 72px;
+        background-position: -240px 60px;
       }
     }
   }
